# wtforms

./: .bumpversion.cfg  .coveragerc  .gitignore  .hgignore  .hgignore.orig  .landscape.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  AUTHORS.txt  CHANGES.rst  CHANGES.txt  Flask_WTF-0.14.dev20161018-py3-none-any.whl  INSTALL.txt  LICENSE.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  commit_msg.txt  foo.py  hatch_build.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yaml  publish.yaml  tests.yaml
artwork/: wtforms_trac_logo.psd
docs/: Makefile  api.rst  changes.rst  conf.py  conftest.py  contributing.rst  crash_course.rst  crashcourse.rst  csrf.rst  ext.rst  faq.rst  fields.rst  forms.rst  highlevel.rst  home_page.rst  i18n.rst  index.rst  installation.rst  intro.rst  introduction.rst  make.bat  meta.rst  requirements.txt  specific_problems.rst  tutorial.rst  validators.rst  whats_new.rst  widgets.rst
docs/_static/: docstyles.css  main.css
docs/_templates/: layout.html
src/wtforms/: __init__.py  _compat.py  compat.py  datalist.py  form.py  i18n.py  meta.py  utils.py  validators.py
src/wtforms/csrf/: core.py  session.py
src/wtforms/fields/: __init__.py  choices.py  core.py  datetime.py  form.py  html5.py  list.py  numeric.py  simple.py
src/wtforms/locale/: README.md  wtforms.pot
src/wtforms/locale/ar/LC_MESSAGES/: wtforms.po
src/wtforms/locale/bg/LC_MESSAGES/: wtforms.po
src/wtforms/locale/ca/LC_MESSAGES/: wtforms.po
src/wtforms/widgets/: __init__.py  core.py  html5.py
tests/: common.py  conftest.py  csrf.py  ext_csrf.py  ext_dateutil.py  ext_django.py  ext_i18n.py  ext_sqlalchemy.py  fields.py  form.py  i18n.py  locale_babel.py  polyglot.py  runtests.py  test_csrf.py  test_datalist.py  test_deprecations.py  test_ext_csrf.py  test_ext_dateutil.py  test_ext_sqlachemy.py  test_fields.py  test_form.py  test_i18n.py  test_locale_babel.py  test_requirements.txt  test_validators.py  test_webob.py  test_webob_wrapper.py  test_widgets.py  translations.py  validators.py  webob_wrapper.py  widgets.py  wtforms
tests/ext_appengine/: app.yaml  gaetest_common.py  test_ext_appengine.py  test_ndb.py  tests.py
tests/ext_django/: models.py  test_django.py  tests.py
tests/ext_django/fixtures/: ext_django.json
tests/ext_tornado/: tests.py
tests/ext_tornado/translations/: es_ES.csv
tests/fields/: test_boolean.py  test_button.py  test_color.py  test_custom.py  test_date.py  test_datetime.py  test_datetimelocal.py  test_decimal.py  test_defaults.py  test_field.py  test_file.py  test_filters.py  test_flags.py  test_float.py  test_form.py  test_hidden.py  test_html5.py  test_integer.py  test_label.py  test_list.py  test_month.py  test_password.py  test_radio.py  test_select.py  test_selectmultiple.py  test_string.py  test_submit.py  test_textarea.py  test_time.py  test_week.py
tests/validators/: test_anyof.py  test_data_required.py  test_date_range.py  test_digit_required.py  test_disabled.py  test_email.py  test_equal_to.py  test_input_required.py  test_ipaddress.py  test_lazy_proxy.py  test_length.py  test_lowercase_required.py  test_mac_address.py  test_noneof.py  test_not_equal_to.py  test_number_range.py  test_optional.py  test_readonly.py  test_regexp.py  test_symbol_required.py  test_uppercase_required.py  test_url.py  test_uuid.py  test_validators.py
wtforms/: __init__.py  compat.py  fields.py  form.py  i18n.py  meta.py  utils.py  validators.py  widgets.py
wtforms/contrib/django/templatetags/: wtforms.py
wtforms/csrf/: core.py  session.py
wtforms/ext/appengine/: __init__.py  db.py  fields.py  models.py  ndb.py
wtforms/ext/csrf/: form.py  session.py
wtforms/ext/dateutil/: fields.py
wtforms/ext/django/: __init__.py  fields.py  models.py  orm.py  utils.py
wtforms/ext/django/templatetags/: wtforms.py
wtforms/ext/i18n/: form.py  utils.py
wtforms/ext/i18n/messages/: wtforms.pot
wtforms/ext/sqlalchemy/: __init__.py  fields.py  orm.py  validators.py
wtforms/ext/tornado/: __init__.py  i18n.py
wtforms/fields/: __init__.py  core.py  html5.py  simple.py
wtforms/locale/: README.txt  wtforms.pot
wtforms/locale/ar/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/bg/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/ca/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/cs_CZ/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/cy/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/cz/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/de/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/de_CH/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/el/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/en/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/es/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/et/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/fa/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/fi/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/fr/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/he/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/hu/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/it/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/ja/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/ko/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/nb/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/nl/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/pl/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/pt/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/ru/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/sk/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/sv/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/tr/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/uk/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/zh/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/locale/zh_TW/LC_MESSAGES/: wtforms.mo  wtforms.po
wtforms/widgets/: __init__.py  core.py  html5.py
(+49 files in other folders)
