[project]
name = "WTForms"
description = "Form validation and rendering for Python web development."
readme = "README.rst"
license = {file = "LICENSE.rst"}
maintainers = [{name = "WTForms"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.9"
dependencies = [
    "MarkupSafe",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://wtforms.readthedocs.io"
Changes = "https://wtforms.readthedocs.io/changes"
"Source Code" = "https://github.com/pallets-eco/wtforms/"
"Issue Tracker" = "https://github.com/pallets-eco/wtforms/issues"
Chat = "https://discord.gg/pallets"

[project.optional-dependencies]
email = ["email_validator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wtforms"]

[tool.hatch.version]
path = "src/wtforms/__init__.py"

[tool.hatch.build]
include = [
    "src/",
    "docs/",
    "tests/",
    "CHANGES.rst",
    "tox.ini",
]
exclude = [
    "docs/_build/",
]
artifacts = ["src/wtforms/locale/**/*.mo"]

[tool.hatch.build.hooks.custom]
dependencies = [
    "Babel>=2.6.0",
    "setuptools; python_version>='3.12'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["wtforms", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "pass",
]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
