[project]
name = "WTForms"
description = "Form validation and rendering for Python web development."
readme = "README.rst"
license = {file = "LICENSE.rst"}
maintainers = [{name = "WTForms"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = [
    "MarkupSafe>=1.1.1",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://wtforms.readthedocs.io"
Changes = "https://wtforms.readthedocs.io/changes"
"Source Code" = "https://github.com/pallets-eco/wtforms/"
"Issue Tracker" = "https://github.com/pallets-eco/wtforms/issues"
Chat = "https://discord.gg/pallets"

[project.optional-dependencies]
email = ["email_validator>=2.0"]

[dependency-groups]
docs = [
    "Sphinx~=7.0.0",
    "Pallets-Sphinx-Themes~=2.2.0",
    "sphinx-issues~=4.0.0",
    "sphinxcontrib-log-cabinet~=1.0.1",
]
dev = [
    "pytest>=7.0",
    "babel>=2.8",
    "email_validator>=2.0",
    "coverage>=6.0",
    "prek>=0.3.9",
    "tox-uv>=1.35.1",
]

[tool.tox]
env_list = [
    "style",
    "minversions",
    "py314",
    "py313",
    "py312",
    "py311",
    "py310",
    "pypy310",
    "docs",
]
skip_missing_interpreters = true

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [
    ["pytest", "--tb=short", "-l", "--basetemp={envtmpdir}", { replace = "posargs", extend = true }],
]

[tool.tox.env.coverage]
dependency_groups = ["dev"]
commands = [
    ["coverage", "erase"],
    ["coverage", "run", "--parallel", "--module", "pytest", "--tb=short", "--basetemp={envtmpdir}", { replace = "posargs", extend = true }],
    ["coverage", "combine"],
    ["coverage", "html"],
    ["coverage", "report"],
]

[tool.tox.env.style]
skip_install = true
dependency_groups = []
deps = ["prek>=0.3.9"]
commands = [["prek", "run", "--all-files", "--show-diff-on-failure"]]

[tool.tox.env.docs]
dependency_groups = ["docs"]
commands = [["sphinx-build", "-W", "-b", "html", "-d", "{envtmpdir}/doctrees", "docs", "{envtmpdir}/html"]]

[tool.tox.env.minversions]
base_python = ["py3.10"]
uv_resolution = "lowest-direct"
dependency_groups = ["dev"]
commands = [
    ["pytest", "--tb=short", "-l", "--basetemp={envtmpdir}", { replace = "posargs", extend = true }],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wtforms"]

[tool.hatch.version]
path = "src/wtforms/__init__.py"

[tool.hatch.build]
include = [
    "src/",
    "docs/",
    "tests/",
    "CHANGES.rst",
]
exclude = [
    "docs/_build/",
]
artifacts = ["src/wtforms/locale/**/*.mo"]

[tool.hatch.build.hooks.custom]
dependencies = [
    "Babel>=2.6.0",
    "setuptools; python_version>='3.12'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["wtforms", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "pass",
]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
