[metadata]
license_files = LICENSE.rst
long_description_content_type = text/x-rst

[extract_messages]
copyright_holder = WTForms Team
output_file = src/wtforms/locale/wtforms.pot

[init_catalog]
input_file = src/wtforms/locale/wtforms.pot
output_dir = src/wtforms/locale/
domain = wtforms

[update_catalog]
input_file = src/wtforms/locale/wtforms.pot
output_dir = src/wtforms/locale/
domain = wtforms
update-header-comment = true
no-fuzzy-matching = true
ignore-obsolete = true

[compile_catalog]
directory = src/wtforms/locale/
domain = wtforms
statistics = true

[tool:pytest]
testpaths = tests

[coverage:run]
branch = true
source =
    wtforms

[coverage:paths]
source =
    src/wtforms
    */site-packages

[coverage:report]
exclude_lines =
    pragma: no cover
    except ImportError:

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
