[metadata]
name = WTForms
version = 3.0.0.dev
url = https://wtforms.readthedocs.io/
project_urls =
    Documentation = https://wtforms.readthedocs.io/
    Code = https://github.com/wtforms/wtforms
    Issue Tracker = https://github.com/wtforms/wtforms/issues
license = BSD-3-Clause
license_files = LICENSE.rst
maintainer = WTForms
maintainer_email = davidism@gmail.com
description = Form validation and rendering for Python web development.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
setup_requires = Babel >= 2.6.0
install_requires = MarkupSafe

[options.packages.find]
where = src

[options.extras_require]
email = email_validator

[extract_messages]
copyright_holder = WTForms Team
output_file = src/wtforms/locale/wtforms.pot

[init_catalog]
input_file = src/wtforms/locale/wtforms.pot
output_dir = src/wtforms/locale/
domain = wtforms

[update_catalog]
input_file = src/wtforms/locale/wtforms.pot
output_dir = src/wtforms/locale/
domain = wtforms
update-header-comment = true
no-fuzzy-matching = true
ignore-obsolete = true

[compile_catalog]
directory = src/wtforms/locale/
domain = wtforms
statistics = true

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = true
source =
    wtforms

[coverage:paths]
source =
    src/wtforms
    */site-packages

[coverage:report]
exclude_lines =
    pragma: no cover
    except ImportError:

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
